[package]
name = "lattice-based-signature"
version = "0.1.0"
authors = ["AlvinHon <alvin.cpp@gmail.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/AlvinHon/lattice-based-signature"
description = "A straightforward rust implementation of Lattice-based signature scheme"


[lib]
name = "lattice_based_signature"
path = "src/lib.rs"

[dependencies]
digest = "0.10.7"
num = "0.4"
rand = "0.8.5"

[dependencies.num-bigint]
version = "0.4.6"
features = ["rand"]

[dev-dependencies]
ripemd = "0.1.3"